add desktop style

--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -14,7 +14,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  // font-family: ;
-  // background-color: ;
-  // color: ;
+  background-color: var(--main-bg);
+  color: white;
+  font-size: rem(15);
 }
