--- a/app/scss/globals/_layout.scss
+++ b/app/scss/globals/_layout.scss
@@ -1,5 +1,5 @@
 @use '../utilities/' as *;
-  /*
+/*
   // Centering Block
 
   // max-width: 1000px;
@@ -11,3 +11,17 @@
   // padding-right: 20px;
   width: min(100% - u.rem(40), u.rem(1000));
   */
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  // width: rem(1112);
+  width: min(100% - rem(40), rem(1112));
+  margin-inline: auto;
+  min-height: rem(442);
+}
