--- a/app/scss/globals/_typography.scss
+++ b/app/scss/globals/_typography.scss
@@ -4,12 +4,15 @@ h1,
 h2,
 h3 {
   font-weight: 700;
-  line-height: 1.1;
+  line-height: 1.2;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 p {
   margin-top: 0;
+  margin-bottom: 0;
+  color: var(--text-color);
 }
 
 a,
