--- a/app/scss/components/_card.scss
+++ b/app/scss/components/_card.scss
@@ -80,6 +80,7 @@
         flex: 1;
         text-transform: uppercase;
         margin-right: rem(20);
+        font-family: var(--deca-font);
 
         & h2 {
           font-weight: 700;
