--- a/app/scss/globals/_fonts.scss
+++ b/app/scss/globals/_fonts.scss
@@ -1,4 +1,4 @@
 :root {
   --inter-font: 'Inter', sans-serif;
-  --deca-font: '' Lexend Deca ', sans-serif;';
+  --deca-font: ' Lexend Deca', sans-serif;
 }
